<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/misty_mountain_bgd"
    android:visibility="visible"
    tools:context="com.example.bookee.weatherinfo.search.SearchActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/desired_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/enter_name_of_the_city"
        android:imeOptions="actionDone"

        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        />

    <Button
        android:id="@+id/get_forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desired_city_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"


        android:text="@string/get_forecast" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />
</RelativeLayout>
